added basic validation checks and prepared ui around them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="username">Username</string>
     <string name="repeat_password">Repeat password</string>
     <string name="enter_username">Enter username</string>
+    <string name="already_have_an_account">Already have an account?</string>
 </resources>
