--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -32,4 +32,5 @@
     <string name="first_volume_msg">Jesteś na początku serii! Czas rozpocząć przygodę.</string>
     <string name="last_volume_msg">Gratulacje! Ukończyłeś tę część serii. Jeśli to ostatni tom, dziękujemy za wspólną podróż!</string>
     <string name="sign_out">Wyloguj się</string>
+    <string name="no_synopsis_available">Brak streszczenia</string>
 </resources>
