--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -58,4 +58,5 @@
     <string name="username_short">Pseudonim musi mieć przynajmniej 3 znaki.</string>
     <string name="email_empty">Pole email nie może być puste.</string>
     <string name="invalid_email">Email jest niepoprawny.</string>
+    <string name="Empty_library_message">Twoja lista jest pusta! Wybierz serię i bądź na bieżąco z nowymi rozdziałami.</string>
 </resources>
